image url change

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h3>Livraison offerte à partir de 65€ d'achat !</h3>
         <div class="header-container">
             <div class="banner">
-                <img class="logo" src="logo.png" alt="">
+                <img class="logo" src="assets/logo.png" alt="">
             </div>
             <nav>
                 <ul>
@@ -27,27 +27,27 @@
     <main>
         <div class="offer-banner">
         <h1>Lorem ipsum dolor sit amet.</h1>
-        <img src="offre-noel.jpg" alt="">
+        <img src="assets/offre-noel.jpg" alt="">
         <p>Pour toute commande effectuée avant le 20 décembre</p>
         </div>
         <article class="products">
             <div class="tea">
                 <h4>Blue of London</h4>
-                <img src="tea.jpg" alt="">
+                <img src="assets/tea.jpg" alt="">
                 <a href="#">A partir de 7.60€</a>
                 <br>
                 <button type="button"><a href="#">Voir ce produit</a></button>
             </div>
             <div class="tea">
                 <h4>Blue of London</h4>
-                <img src="tea.jpg" alt="">
+                <img src="assets/tea.jpg" alt="">
                 <a href="#">A partir de 7.60€</a>
                 <br>
                 <button type="button"><a href="#">Voir ce produit</a></button>
             </div>
             <div class="tea">
                 <h4>Blue of London</h4>
-                <img src="tea.jpg" alt="">
+                <img src="assets/tea.jpg" alt="">
                 <a href="#">A partir de 7.60€</a>
                 <br>
                 <button type="button"><a href="#">Voir ce produit</a></button>
