page about us and new columns

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Quicksand&family=Roboto+Condensed&family=Sacramento&display=swap" rel="stylesheet">
     <title>CUP oF TEA</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,15 +14,15 @@
         <h3>Livraison offerte à partir de 65€ d'achat !</h3>
         <div class="header-container">
             <div class="banner">
-                <img class="logo" src="assets/logo.png" alt="">
+                <a href="index.html"><img class="logo" src="assets/logo.png" alt=""></a>
             </div>
             <nav>
                 <ul>
-                    <li>THES</li>
-                    <li>GRANDS CRUS</li>
-                    <li>ACCESSOIRES</li>
-                    <li>EPICERIE</li>
-                    <li>NOTRE HISTOIRE</li>
+                    <li><a href="index.html">THES</a></li>
+                    <li><a href="#">GRANDS CRUS</a></li>
+                    <li><a href="#">ACCESSOIRES</a></li>
+                    <li><a href="#">EPICERIE</a></li>
+                    <li><a href="about.html">NOTRE HISTOIRE</a></li>
                 </ul>
             </nav>
         </div>
